@@ -5,6 +5,7 @@
 	* Added option to disable TeleText stream
 	* Fixed typo for "text_encoding" (LP: 689121)
 	* Fixed issue with recurring SRs being removed (LP: 688925)
+	* Using signal_toggled() to capture key presses in EPG (LP: 678452)
 
 2010-11-11  Michael Lamothe <michael.lamothe@gmail.com>
 
